Bug 499763 - [pmi] Broken layout for "Build Technologies"
Remove stylings for bugzilla field except min. for color & centering

Remove li:last-child padding from fonts.less effecting pill size on last

Remove nav-link-hover-bg transparent from _variables so nav pills show

Revert build-failed to failure (mismatch class name fixed in module)

--- a/stylesheets/_core/_variables.less
+++ b/stylesheets/_core/_variables.less
@@ -36,11 +36,6 @@
 //== /_core/template/header.less
 @header-background:#fff;
 
-// == Nav
-
-// Nav hover background color
-@nav-link-hover-bg: transparent;
-
 //==  Mobile menu colors
 
 // Main colors for the menu
