--- a/stylesheets/_core/fonts.less
+++ b/stylesheets/_core/fonts.less
@@ -27,9 +27,6 @@ a[name], a[name]:hover {
 .font-size-large{
     font-size:58px;
 }
-li:last-child{
-    padding-bottom:7px;
-}
 
 ul{
     ul{
