--- a/stylesheets/projects/fields/project-build.less
+++ b/stylesheets/projects/fields/project-build.less
@@ -25,7 +25,7 @@
           &.build-unstable{
             color: yellow;
           }
-          &.build-failed{
+          &.build-failure{
             color: red;
           }
           &.build-status-code{
